--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,32 @@
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
 title: Julia's homepage
 description: Bookmark this to keep an eye on my project updates!
+
+theme: null
+
+# debug:
+#   compress: true
+#   dist: false
+#   shortcodes: true
+
+readme_index:
+  with_frontmatter: true
+
+plugins:
+  - jemoji
+  - jekyll-avatar
+  - jekyll-mentions
+
+exclude:
+  - Makefile
+  - CNAME
+  - LICENSE
+  - update.sh
+  - Gemfile
+  - Gemfile.lock
+  - requirements.txt
+  - node_modules
+  - package.json
+  - package-lock.json
+  - webpack.config.js
+  - jekyll-rtd-theme.gemspec
