--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,6 @@
-#theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal
 title: Julia's homepage
 description: Bookmark this to keep an eye on my project updates!
-
-theme: null
-
-# debug:
-#   compress: true
-#   dist: false
-#   shortcodes: true
 
 readme_index:
   with_frontmatter: true
