--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
+remote_theme: just-the-docs/just-the-docs
 title: Julia's homepage
 description: Bookmark this to keep an eye on my project updates!
 
